@@ -5,6 +5,11 @@ Generally created by hand after running:
    {py_dir}\Tools\scripts\logmerge.py -t < log.out > log2.out
 However contributors are encouraged to add their own entries for their work.
 
+Since build 212:
+----------------
+
+* MAPI gets support for IMAPIAdviseSink
+
 Since build 211:
 ----------------
 
